# otolith-cod

./: .gitignore  WORKLOG.md  cod_otolith_age_final.csv  cod_otolith_age_final_with_quarters.csv  create_issues.sh  pyproject.toml
configs/: config.yaml
notebooks/: testing.ipynb
plans/: feat-compare-siglip-sota-model.md  feat-finetune-shallow-siglip2-classifier.md  refactor-openclip-to-huggingface.md
scripts/: __init__.py  run_experiment.py  train_shallow_classifier.py
src/data/: __init__.py  dataset.py  splits.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  feature_extractor.py  shallow_models.py
src/training/: __init__.py
src/utils/: __init__.py  config.py  device.py
src/visualization/: __init__.py
